[options]
install_requires =
    widgetastic.core
    aenum==3.1.8
setup_requires = setuptools_scm
package_dir =
    =src
packages=find:

[options.packages.find]
where=src

[options.extras_require]
test =
    allure-pytest
    coveralls
    podman
    pytest
    pytest_httpserver
    pytest-cov
    pytest-xdist
dev =
    podman
    pre-commit
    pytest
    pytest-xdist
    pytest_httpserver
    pytest-cov
docs =
    sphinx
