[options]
install_requires =
    widgetastic.core
    aenum==2.2.3
setup_requires = setuptools_scm
package_dir =
    =src
packages=find:

[options.packages.find]
where=src

[options.extras_require]
test =
    allure-pytest
    coveralls
    podman
    pytest
    pytest_httpserver
    pytest-cov
dev =
    podman
    pre-commit
    pytest
    pytest-xdist
    pytest_httpserver
    pytest-cov
docs =
    sphinx

