[metadata]
name = widgetastic.patternfly
author = Milan Falesnik
author_email = mfalesni@redhat.com
maintainer = RedHatQE
maintainer_email = mshriver@redhat.com
description= Patternfly widget library for Widgetastic
long_description = file: README.rst
long_description_content_type=text/x-rst
license= Apache license
url= https://github.com/RedHatQE/widgetastic.patternfly
classifiers=
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing

[options]
python_requires = >= 3.8
install_requires =
    widgetastic.core>=1.0.0
setup_requires = setuptools_scm
package_dir =
    =src
packages=find:

[options.packages.find]
where=src

[options.extras_require]
test =
    allure-pytest
    coveralls
    podman
    pytest
    pytest_httpserver
    pytest-cov
    pytest-xdist
dev =
    podman
    pre-commit
    pytest
    pytest-xdist
    pytest_httpserver
    pytest-cov
docs =
    sphinx
